# sr

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml  relations_spec.md  sr.py  test_cards.md  test_suspended.md  todo.md
example_sr_dir/: sr.db
example_sr_dir/adapters/: basic_qa.py
example_sr_dir/schedulers/sm2/: sm2.db  sm2.py
schedulers/sm2/: sm2.py
sr/: __init__.py  __main__.py  adapters.py  app.py  cli.py  config.py  db.py  decks.py  flags.py  models.py  review_session.py  scanner.py  schedulers.py  server.py  server_browse.py  server_decks.py  server_review.py  sync.py
sr/adapters/: __init__.py  mnmd.py
sr/templates/: app.html  browse.html  decks.html  review.html
sr_dir/: pharmacology.md
sr_dir/.sr/: settings.toml
sr_dir/.sr/schedulers/sm2/: sm2.py
test_notes/biology/: cells.md  photosynthesis.md
test_notes/history/: ancient_rome.md  ww2.md
tests/: conftest.py  test_adapters.py  test_browse_api.py  test_cli.py  test_config.py  test_db.py  test_decks.py  test_flags.py  test_mnmd.py  test_models.py  test_review_api.py  test_review_session.py  test_scanner.py  test_server.py  test_sm2.py  test_sync.py
